[gd_scene load_steps=40 format=3 uid="uid://d1e8i71sm0pf1"]

[ext_resource type="Script" path="res://Scene/InfraMiniGame/FillGranary/fill_granary_puzzle.gd" id="1_77qou"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="3_srxaq"]
[ext_resource type="FontFile" uid="uid://b8le0fd0ujbqx" path="res://Asset/Font/1_blod.ttf" id="4_8k53q"]
[ext_resource type="PackedScene" uid="uid://ckj86ewrbo4nn" path="res://Scene/InfraMiniGame/FillGranary/fill_grannary_Horse.tscn" id="4_mwbjf"]
[ext_resource type="FontFile" uid="uid://to00njkwmxts" path="res://Asset/Font/1_sim.ttf" id="4_vpfxr"]
[ext_resource type="Texture2D" uid="uid://dpe4rybr273da" path="res://Asset/斧子.png" id="5_a1noe"]
[ext_resource type="Texture2D" uid="uid://cd5aooi3ctycq" path="res://Asset/particle/2/vnbvx_1.png" id="8_w4daf"]
[ext_resource type="Texture2D" uid="uid://b3gcl741a44k4" path="res://Asset/particle/2/vnbvx_2.png" id="9_c4hw2"]
[ext_resource type="Texture2D" uid="uid://dgsrglc1h3ehs" path="res://Asset/particle/2/vnbvx_3.png" id="10_hiwoq"]
[ext_resource type="Texture2D" uid="uid://dcmy4wih2o3kk" path="res://Asset/particle/2/vnbvx_4.png" id="11_tvk2q"]
[ext_resource type="Texture2D" uid="uid://cw01sgqmdablu" path="res://Asset/particle/2/vnbvx_5.png" id="12_jjew7"]
[ext_resource type="Texture2D" uid="uid://cvedet12qfaff" path="res://Asset/particle/2/vnbvx_6.png" id="13_a1ngj"]
[ext_resource type="Texture2D" uid="uid://cn8gfnnxj2g26" path="res://Asset/particle/2/vnbvx_7.png" id="14_u20cw"]
[ext_resource type="Texture2D" uid="uid://bfw3txo3h2d47" path="res://Asset/particle/2/vnbvx_8.png" id="15_aybv8"]
[ext_resource type="PackedScene" uid="uid://cn0a85r85dcnn" path="res://Scene/InfraMiniGame/FillGranary/granaryHouse.tscn" id="15_dyhny"]
[ext_resource type="Texture2D" uid="uid://dsubrb1s7fd0l" path="res://Asset/particle/2/vnbvx_9.png" id="16_0kn8r"]
[ext_resource type="Texture2D" uid="uid://1te3owxrs7p3" path="res://Asset/particle/2/vnbvx_10.png" id="17_i78rj"]
[ext_resource type="Texture2D" uid="uid://b50bq8o4gj7fm" path="res://Asset/particle/2/vnbvx_11.png" id="18_6ncn3"]
[ext_resource type="Texture2D" uid="uid://c5dqowuemor4v" path="res://Asset/particle/2/vnbvx_12.png" id="19_u6wcs"]
[ext_resource type="Texture2D" uid="uid://deyxqm3u0k2gd" path="res://Asset/particle/2/vnbvx_13.png" id="20_ggydt"]
[ext_resource type="Texture2D" uid="uid://ck7bo3di13qjt" path="res://Asset/particle/2/vnbvx_14.png" id="21_7os78"]
[ext_resource type="Texture2D" uid="uid://bre6e3sasavl6" path="res://Asset/particle/2/vnbvx_15.png" id="22_iafua"]
[ext_resource type="Texture2D" uid="uid://bl1i3swlxhhbs" path="res://Asset/particle/2/vnbvx_16.png" id="23_qgj5o"]
[ext_resource type="Texture2D" uid="uid://c67ko07lr14ns" path="res://Asset/particle/2/vnbvx_17.png" id="24_udopg"]
[ext_resource type="Texture2D" uid="uid://gv33ldjtkpgn" path="res://Asset/particle/2/vnbvx_18.png" id="25_jccvf"]
[ext_resource type="Texture2D" uid="uid://dj6n331ktr5v6" path="res://Asset/particle/2/vnbvx_19.png" id="26_u31pa"]
[ext_resource type="Texture2D" uid="uid://cx6ih11314lk5" path="res://Asset/particle/2/vnbvx_20.png" id="27_mvyyx"]
[ext_resource type="Texture2D" uid="uid://dgmttpsuayowi" path="res://Asset/particle/2/vnbvx_21.png" id="28_ps3kn"]
[ext_resource type="Texture2D" uid="uid://xb7yic2dti46" path="res://Asset/particle/2/vnbvx_22.png" id="29_phujc"]
[ext_resource type="Texture2D" uid="uid://bd3mfoewp785h" path="res://Asset/particle/2/vnbvx_23.png" id="30_2aamt"]
[ext_resource type="Texture2D" uid="uid://cqkc7j623aj5h" path="res://Asset/particle/2/vnbvx_24.png" id="31_3koba"]
[ext_resource type="Texture2D" uid="uid://djwldjfn51oey" path="res://Asset/particle/2/vnbvx_25.png" id="32_hsiri"]
[ext_resource type="Texture2D" uid="uid://cbysxx8mso0x4" path="res://Asset/particle/2/vnbvx_26.png" id="33_ltcdc"]
[ext_resource type="Texture2D" uid="uid://cct0spp0q00mp" path="res://Asset/particle/2/vnbvx_27.png" id="34_udtsk"]
[ext_resource type="Texture2D" uid="uid://de5u8jbrtr8nk" path="res://Asset/particle/2/vnbvx_28.png" id="35_q5jvt"]
[ext_resource type="Texture2D" uid="uid://0o5hddxuvape" path="res://Asset/particle/2/vnbvx_29.png" id="36_8d6ox"]

[sub_resource type="Animation" id="Animation_sbwhj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_w4daf")]
}

[sub_resource type="Animation" id="Animation_ygt83"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667, 0.4, 0.433333, 0.466667, 0.5, 0.533333, 0.566667, 0.6, 0.633333, 0.666667, 0.7, 0.733333, 0.766667, 0.8, 0.833333, 0.866667, 0.933333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_w4daf"), ExtResource("9_c4hw2"), ExtResource("10_hiwoq"), ExtResource("11_tvk2q"), ExtResource("12_jjew7"), ExtResource("13_a1ngj"), ExtResource("14_u20cw"), ExtResource("15_aybv8"), ExtResource("16_0kn8r"), ExtResource("17_i78rj"), ExtResource("18_6ncn3"), ExtResource("19_u6wcs"), ExtResource("20_ggydt"), ExtResource("21_7os78"), ExtResource("22_iafua"), ExtResource("23_qgj5o"), ExtResource("24_udopg"), ExtResource("25_jccvf"), ExtResource("26_u31pa"), ExtResource("27_mvyyx"), ExtResource("28_ps3kn"), ExtResource("29_phujc"), ExtResource("30_2aamt"), ExtResource("31_3koba"), ExtResource("32_hsiri"), ExtResource("33_ltcdc"), ExtResource("34_udtsk"), ExtResource("35_q5jvt"), ExtResource("36_8d6ox")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qe0qn"]
_data = {
"RESET": SubResource("Animation_sbwhj"),
"win": SubResource("Animation_ygt83")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_77qou")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1381.0
offset_top = -882.0
offset_right = 1611.0
offset_bottom = 730.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -669.0
offset_top = -411.0
offset_right = 669.0
offset_bottom = 411.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
mouse_filter = 1
theme = ExtResource("3_srxaq")

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 69
text = "基建工程-兴建粮仓"

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(0, 60)
layout_mode = 0
offset_left = 328.0
offset_top = 250.0
offset_right = 1596.0
offset_bottom = 708.0
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="tracks" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 165.0
offset_right = 1596.0
offset_bottom = 834.0
theme_override_constants/separation = 30
alignment = 1

[node name="ColorRect2" type="ColorRect" parent="tracks"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="ColorRect3" type="ColorRect" parent="tracks"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="ColorRect4" type="ColorRect" parent="tracks"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="ColorRect5" type="ColorRect" parent="tracks"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="ColorRect6" type="ColorRect" parent="tracks"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="hourses" type="Node2D" parent="."]
position = Vector2(328, 165)

[node name="FillGrannaryHorse1" parent="hourses" instance=ExtResource("4_mwbjf")]
visible = false
position = Vector2(3, 44)

[node name="FillGrannaryHorse2" parent="hourses" instance=ExtResource("4_mwbjf")]
position = Vector2(0, 132)

[node name="FillGrannaryHorse3" parent="hourses" instance=ExtResource("4_mwbjf")]
visible = false
position = Vector2(2, 220)

[node name="FillGrannaryHorse4" parent="hourses" instance=ExtResource("4_mwbjf")]
visible = false
position = Vector2(5, 305)

[node name="FillGrannaryHorse5" parent="hourses" instance=ExtResource("4_mwbjf")]
visible = false
position = Vector2(5, 397)

[node name="SettleButton" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 1373.0
offset_top = 724.0
offset_right = 1535.0
offset_bottom = 871.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(77.445, 73.435)
texture_normal = ExtResource("5_a1noe")
ignore_texture_size = true
stretch_mode = 5

[node name="detail" type="Label" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 715.0
offset_right = 1264.0
offset_bottom = 827.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 15
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 48
text = "接下来的运粮车：1、2、3
游戏提示：请选中左边粮车和未满的粮仓

"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1347.0
offset_top = 858.0
offset_right = 1567.0
offset_bottom = 944.0
theme_override_colors/font_color = Color(0.920739, 0.825048, 0.614126, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 37
text = "放弃基建"
horizontal_alignment = 1

[node name="resideCar" type="Label" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 827.0
offset_right = 696.0
offset_bottom = 925.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 48
text = "剩余粮车:7
"
vertical_alignment = 1

[node name="currenceValue" type="Label" parent="."]
layout_mode = 0
offset_left = 624.0
offset_top = 827.0
offset_right = 981.0
offset_bottom = 925.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 48
text = "当前粮食：1000
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetNum" type="Label" parent="."]
layout_mode = 2
offset_left = 1006.0
offset_top = 827.0
offset_right = 1374.0
offset_bottom = 925.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_vpfxr")
theme_override_font_sizes/font_size = 48
text = " 目标粮食：1000
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="granarys" type="Node2D" parent="."]
position = Vector2(1351, 874)

[node name="GranaryHouse1" parent="granarys" instance=ExtResource("15_dyhny")]
position = Vector2(-85, -600)

[node name="GranaryHouse2" parent="granarys" instance=ExtResource("15_dyhny")]
position = Vector2(-86, -506)

[node name="GranaryHouse3" parent="granarys" instance=ExtResource("15_dyhny")]
position = Vector2(-85, -416)

[node name="GranaryHouse4" parent="granarys" instance=ExtResource("15_dyhny")]
position = Vector2(-86, -326)

[node name="GranaryHouse5" parent="granarys" instance=ExtResource("15_dyhny")]
position = Vector2(-86, -234)

[node name="winRect" type="ColorRect" parent="."]
visible = false
z_index = 4096
layout_mode = 0
offset_right = 1942.0
offset_bottom = 1254.0
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="winRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -967.0
offset_top = -511.0
offset_right = 968.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.858198, 0.883128, 1)
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 146
text = "基建完成"
horizontal_alignment = 1
vertical_alignment = 1

[node name="achiwin" type="Label" parent="winRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -961.0
offset_top = -608.0
offset_right = 974.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.858198, 0.883128, 1)
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="Button" type="Button" parent="winRect"]
layout_mode = 0
offset_left = 752.0
offset_top = 542.0
offset_right = 1163.0
offset_bottom = 698.0
text = "结束游戏"

[node name="blinkRect" type="TextureRect" parent="winRect"]
visible = false
layout_mode = 0
offset_left = 403.0
offset_top = 80.0
offset_right = 628.0
offset_bottom = 280.0
scale = Vector2(5, 5)
texture = ExtResource("8_w4daf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="winRect/blinkRect"]
libraries = {
"": SubResource("AnimationLibrary_qe0qn")
}

[node name="LoseRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1942.0
offset_bottom = 1254.0
color = Color(1, 0, 0, 0.568627)

[node name="Label" type="Label" parent="LoseRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -967.0
offset_top = -622.0
offset_right = 968.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_8k53q")
theme_override_font_sizes/font_size = 146
text = "没达到需求粮食
基建失败"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="LoseRect"]
z_index = 4096
layout_mode = 0
offset_left = 747.0
offset_top = 577.0
offset_right = 1158.0
offset_bottom = 733.0
text = "放弃基建"

[connection signal="button_down" from="SettleButton" to="." method="_on_giveup_button_down"]
[connection signal="mouse_entered" from="SettleButton" to="." method="_on_giveup_button_mouse_entered"]
[connection signal="mouse_exited" from="SettleButton" to="." method="_on_giveup_button_mouse_exited"]
[connection signal="button_down" from="winRect/Button" to="." method="_on_winAfter_button_down"]
[connection signal="button_down" from="LoseRect/Button" to="." method="loseGameBtn"]
